# BeDoop

./: .gitignore  Cargo.toml  LICENSE  README.md  reset_files.sh  sample.css  sample.css.bak  sample.json  sample.sql  sample.sql.bak  sample.txt  sample.txt.bak  sample.xml  summary.txt  test-makefile
samples/: json.yaml  xml.xml
src/: casing.rs  conversion.rs  encoding.rs  format.rs  main.rs  text_utils.rs  utils.rs
